apps/garage/overlays/home/s3-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-s3
  labels:
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
  ports:
    - name: s3-api
      port: 3900
      targetPort: s3-api
      protocol: TCP
