apps/garage/overlays/home/s3-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-s3
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
      sectionName: garage-dev-https
  hostnames:
    - garage-dev.workrave.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garage
          port: 3900
